fix spacing error in project sum

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -149,7 +149,6 @@
         height: 90%;
         .content {
             margin-top: 0.5rem;
-            font-size: small;
         }
     }
 }
