--- a/src/scss/eyeCatcher.scss
+++ b/src/scss/eyeCatcher.scss
@@ -102,8 +102,9 @@
         height: 100%;
         justify-content: center;
         img {
-            width: 8rem;
-            height: 8rem;
+            width: 9.5rem;
+            height: 9.5rem;
+            margin-bottom: 1rem;
         }
         .link {
             button {
