--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -52,10 +52,12 @@
             width: 100%;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
             .cardWrap {
                 box-sizing: border-box;
                 box-shadow: 0 20px 50px rgba(0, 0, 0, 0.6);
+
+                margin: 1rem;
 
                 display: flex;
                 opacity: 0.65;
@@ -102,9 +104,15 @@
                         top: 0;
                         left: 0;
                     }
+                    p {
+                        display: inline;
+                        margin-top: 2%;
+                    }
                     .github {
                         margin-top: auto;
-                        margin-bottom: 2%;
+                        margin-bottom: 1%;
+                        height: 2rem;
+                        width: 2rem;
                     }
                     svg {
                         width: 1rem;
@@ -142,8 +150,8 @@
 @media only screen and (max-width: 700px) {
     .blurred-box3 {
         width: 85%;
-        height: 85%;
-        top: calc(7.5%);
+        height: 80%;
+        top: calc(10%);
         left: calc(7.5%);
         flex-direction: column;
         align-items: center;
@@ -163,7 +171,7 @@
         flex-direction: column;
         .horiB {
             width: 1.2rem;
-            height: 2rem;
+            height: 1rem;
         }
         .hori {
             width: 100%;
@@ -172,9 +180,9 @@
         }
     }
     .cardWrap {
-        max-height: 6.2rem;
-        width: 100%;
-        height: 100%;
+        max-height: 6rem;
+        width: 90%;
+        height: 70%;
     }
 }
 //for large
